:zap: [#150324434] Make cache dir volatile again (#10)

--- a/meta/recipes-core/systemd/systemd/00-create-volatile.conf
+++ b/meta/recipes-core/systemd/systemd/00-create-volatile.conf
@@ -2,6 +2,6 @@
 # be sorted before 'systemd.conf' becuase this attempts to create a file
 # inside /var/log.
 
-
+d		/var/volatile/cache		-	-	-	-
 d		/var/volatile/log		-	-	-	-
 d		/var/volatile/tmp		1777	-	-
